fixed scrollbar issue for 1024x768 resolution

--- a/css/home_style.css
+++ b/css/home_style.css
@@ -308,6 +308,8 @@ body {
 	margin: 0 auto;
 	background-color: #fff;
 	overflow: hidden;
+	box-shadow: 0px 0px 30px #888,
+				0px 0px 2px #aaa;
 }
 .container {
 	/*float: left;*/
